Name:                   deflisp
Version:                0.0.0
Author:                 Alex P<alex@clojurewerkz.org>
Maintainer:             Alex P<alex@clojurewerkz.org>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Deflisp.Core, Deflisp.Core.Parser, Deflisp.Core.Types
  Other-Modules:        Deflisp.Core.Internal
  Build-Depends:        base >= 4 && < 5, parsec >3, mtl >2.1, containers >0.5, hashtables > 1.0, hashable > 1.0

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , deflisp

Source-Repository head
  Type:                 git
--  Location:
